// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders heading correctly 1`] = `
<div
  className="sc-bxivhb bbnBSQ"
>
  <h1>
    <i
      className="nes-icon nes-mario is-small"
    />
     NintenDB 
    <i
      className="nes-icon nes-kirby is-small"
    />
  </h1>
</div>
`;

exports[`renders the home page correctly 1`] = `
<div
  className="sc-bdVaJa dpQpIH"
>
  <div
    className="sc-htpNat jdiiWr"
  >
    <div
      className="nav-logo"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <i
          className="nes-logo"
        />
        <p>
          NintenDB
        </p>
      </a>
    </div>
    <div
      className="nav-links"
    >
      <a
        href="/random"
        onClick={[Function]}
      >
        <button
          className="nes-btn is-success"
          type="button"
        >
          Random Game
        </button>
      </a>
      <a
        href="/mypage"
        onClick={[Function]}
      >
        <button
          className="nes-btn is-primary"
          type="button"
        >
          My Saved Games
        </button>
      </a>
    </div>
  </div>
  <div
    className="App nes-container is-dark is-rounded"
  >
    <div
      className="sc-bxivhb bbnBSQ"
    >
      <h1>
        <i
          className="nes-icon nes-mario is-small"
        />
         NintenDB 
        <i
          className="nes-icon nes-kirby is-small"
        />
      </h1>
    </div>
    <ul>
      <li>
        Click to get a random Nintendo game from your desired platform and learn more about it.
      </li>
      <li>
        Sign Up and Login to save your games for later viewing
      </li>
      <li>
        Click the heart icon to save your favorite games.
      </li>
    </ul>
    <div
      className="sc-EHOje bCUIMy"
    >
      <form>
        <label
          className="nes-text is-primary"
          htmlFor="platform"
        >
          Choose Your Platform Type
        </label>
        <div
          className="nes-select"
        >
          <select
            defaultValue=""
            id="platform"
            name="platform"
            onChange={[Function]}
            required={true}
          >
            <option
              value="18"
            >
              Nintendo
            </option>
            <option
              value="19"
            >
              Super Nintendo
            </option>
            <option
              value="4"
            >
              N64
            </option>
            <option
              value="21"
            >
              Game Cube
            </option>
          </select>
        </div>
        <a
          href="/random"
          onClick={[Function]}
        >
          <button
            className="nes-btn is-success"
            type="button"
          >
            Random Game
          </button>
        </a>
      </form>
    </div>
    <section
      className="icon-list"
    >
      <i
        className="nes-ash"
      />
      <i
        className="nes-pokeball"
      />
      <i
        className="nes-bulbasaur"
      />
      <i
        className="nes-charmander"
      />
      <i
        className="nes-squirtle"
      />
    </section>
  </div>
</div>
`;

exports[`renders the home page correctly 2`] = `
<div
  className="sc-bwzfXH kDAQSs"
>
  <div
    className="nes-container is-dark is-rounded loading-screen"
  >
    <div
      className="sweet-loading"
    >
      <div
        className="css-hbuhc5-wrapper-wrapper"
      >
        <div
          className="css-1e7sjhp-pacmanStyle"
        />
        <div
          className="css-306891-pacmanStyle"
        />
        <div
          className="css-ph48sd-ballStyle"
        />
        <div
          className="css-cnn7k-ballStyle"
        />
        <div
          className="css-1nzbglu-ballStyle"
        />
        <div
          className="css-1p1zyao-ballStyle"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the navbar with a user 1`] = `
<div
  className="sc-htpNat jdiiWr"
>
  <div
    className="nav-logo"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <i
        className="nes-logo"
      />
      <p>
        NintenDB
      </p>
    </a>
  </div>
  <div
    className="nav-links"
  >
    <a
      href="/random"
      onClick={[Function]}
    >
      <button
        className="nes-btn is-success"
        type="button"
      >
        Random Game
      </button>
    </a>
    <a
      href="/mypage"
      onClick={[Function]}
    >
      <button
        className="nes-btn is-primary"
        type="button"
      >
        My Saved Games
      </button>
    </a>
  </div>
</div>
`;

exports[`renders the navbar without user 1`] = `
<div
  className="sc-htpNat jdiiWr"
>
  <div
    className="nav-logo"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <i
        className="nes-logo"
      />
      <p>
        NintenDB
      </p>
    </a>
  </div>
  <div
    className="nav-links"
  >
    <a
      href="/random"
      onClick={[Function]}
    >
      <button
        className="nes-btn is-success"
        type="button"
      >
        Random Game
      </button>
    </a>
    <a
      href="/signup"
      onClick={[Function]}
    >
      <button
        className="nes-btn is-primary"
        type="button"
      >
        Sign Up
      </button>
    </a>
    <a
      href="/login"
      onClick={[Function]}
    >
      <button
        className="nes-btn is-primary"
        type="button"
      >
        Login
      </button>
    </a>
  </div>
</div>
`;
